4B/cs444/tests/site/pass/pass_packageimport.joos
/* pass: package import */
import java.util.*;

public class A {
  public A() {}
  protected Vector c;
}

