4B/cs444/tests/site/fail/fail_packageprivateclasses.joos
/* fail: package private classes */
package dovs.joos.features;

/* package private */ class A {}

